Fix for option text-aligner using inline-block instead of float.

--- a/modules/wetkit_emberx/css/ember-modal.css
+++ b/modules/wetkit_emberx/css/ember-modal.css
@@ -202,7 +202,7 @@ margin-right: .1em;
 }
 
 #modal-content .option-text-aligner {
-  float: left;
+  display: inline-block;
   width: auto;
 }
 
